# tauri-bootstrap

./: .eslintrc.json  .gitignore  .prettierrc.js  .prettierrc.json  Makefile  README.md  eslintrc.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: browser_manager.rs  commands.rs  config.rs  error.rs  main.rs  prelude.rs  scraper.rs
src-tauri/src/config/: mod.rs
src-tauri/src/scraper/: browser_factory.rs  chunk_scraper.rs  document_scraper.rs  intercept.rs  mod.rs  multithread_scraper.rs  spawn_waiter.rs
