[package]
name = "{{app_name}}"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
captcha_oxide = "3"
ts-rs = { version = "7", features = ["serde-compat", "chrono-impl"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "mysql",
] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.11"
url = "2.4"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
rust_xlsxwriter = "0.54"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
