[package]
name = "app_name"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
captcha_oxide = "5"
ts-rs = { version = "7", features = ["serde-compat", "chrono-impl"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "mysql",
] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
url = "2.4"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
rust_xlsxwriter = "0.62"
exporter_traits = { path = "../../exporter_traits" }
document_validator = { path = "../../document_validator" }
tokio = { version = "1", features = ["full"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = [
  "tokio-runtime",
  "_fetcher-rusttls-tokio",
], default-features = false, branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
