[package]
name = "app_name"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
captcha_oxide = "6"
ts-rs = { version = "8", features = ["serde-compat", "chrono-impl"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
], default-features = false }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "mysql",
], default-features = false }
thiserror = { version = "1.0", default-features = false }
lazy_static = { version = "1.4", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }
itertools = "0.12"
url = { version = "2.5", default-features = false }
futures = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false }
rust_xlsxwriter = { version = "0.64", features = [
  "serde",
], default-features = false }
document_validator = "0.1"
tokio = { version = "1", default-features = false }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = [
  "tokio-runtime",
  "_fetcher-rusttls-tokio",
], default-features = false, branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
